# SlingShot

./: .gitignore  Cargo.toml  README.md  bitrate_floors.json  install.md  instructions.md
adaptive-bitrate/: Cargo.toml
adaptive-bitrate/src/: config.rs  controller.rs  floors.rs  ladder.rs  lib.rs
admin-web/: Cargo.toml
admin-web/src/: lib.rs
admin-web/static/: admin.html  index.html
admin-web/static/designs/: README.md  admin-1-corporate-clean.html  admin-2-industrial-ops.html  admin-3-material.html  admin-5-glass.html  design-1-corporate-clean.html  design-2-industrial-ops.html  design-3-material.html  design-5-glass.html  layout-a-video-centric.html  layout-b-split-horizontal.html  layout-c-minimal-sidebar.html
admin-web/static/themes/: README.md
admin-web/static/themes/corporate-clean/: admin.css  dashboard.css
admin-web/static/themes/glass/: admin.css  dashboard.css
admin-web/static/themes/industrial-ops/: admin.css  dashboard.css
admin-web/static/themes/material/: admin.css  dashboard.css
archive/quic-auth/src/: lib.rs
archive/storage-mount/src/: format.rs  monitor.rs  mount.rs
archive/storage-selector/: .gitignore
archive/storage-selector/src/: lsblk.rs  main.rs
audit-log/: Cargo.toml
audit-log/src/: error.rs  event.rs  lib.rs  logger.rs
central/: .gitignore  Cargo.toml  SYSTEM.md
central-setup/: Cargo.toml
central-setup/src/: main.rs  systemd.rs  wizard.rs
central/src/: lib.rs
config-manager/: Cargo.toml
config-manager/src/: audit.rs  central_pubkey.rs  command_auth.rs  config.rs  encryption.rs  error.rs  identity.rs  lib.rs  obfuscate.rs  onvif_auth.rs  paths.rs  pinned_cert.rs  source.rs  storage.rs  tls_cert.rs
ffmpeg-recorder/: Cargo.toml
ffmpeg-recorder/src/: cleanup.rs  config.rs  encryptor.rs  lib.rs  recorder.rs
fingerprint-store/: Cargo.toml
fingerprint-store/src/: db.rs  error.rs  lib.rs
gst-bridge/: Cargo.toml
gst-bridge/src/: lib.rs
hls-server/: Cargo.toml
hls-server/src/: error.rs  lib.rs  live.rs  playlist.rs  recording.rs  routes.rs  state.rs  transmux.rs
kaiju-encryption/: Cargo.toml
kaiju-encryption/examples/: decrypt_file.rs
kaiju-encryption/src/: error.rs  hybrid.rs  lib.rs
onvif-client/: Cargo.toml
onvif-client/src/: lib.rs
onvif-server/: Cargo.toml
onvif-server/src/: lib.rs  templates.rs
quic-auth/: Cargo.toml
quic-common/: Cargo.toml
quic-common/src/: lib.rs
quic-metrics/: Cargo.toml
quic-metrics/src/: lib.rs
quic-video/: Cargo.toml
quic-video-poc/: Cargo.toml
quic-video-stream/: Cargo.toml
quic-video-test/: Cargo.toml
quic-video/src/: lib.rs
rate-limiter/: Cargo.toml
rate-limiter/src/: lib.rs
recording-retrieval/: Cargo.toml
recording-retrieval/src/: error.rs  files.rs  lib.rs  protocol.rs  time.rs  transfer.rs
remote/: Cargo.toml
remote-setup/: Cargo.toml
remote-setup/src/: main.rs  systemd.rs  wizard.rs
remote-setup/src/storage/: format.rs  fstab.rs  lsblk.rs  mod.rs  mount.rs
remote/src/: main.rs  storage.rs
rtsp-server/: ARCHITECTURE.md  Cargo.toml
rtsp-server-remote/: Cargo.toml
rtsp-server-remote/src/: main.rs
rtsp-server/archive/: standalone_rtsp_server.rs
slingshot-encryption/: Cargo.toml
slingshot-encryption/examples/: decrypt_file.rs
slingshot-encryption/src/: hybrid.rs  lib.rs  x25519.rs
storage-mount/: .gitignore  Cargo.toml
storage-mount/src/: config.rs  fstab.rs  lib.rs  main.rs
storage-selector/: Cargo.toml
storage-selector/src/: config.rs  lib.rs
ws-security/: Cargo.toml
ws-security/src/: digest.rs  error.rs  lib.rs  parse.rs
