[workspace]
resolver = "2"
members = [
    "central",
    "remote",
    "quic-common",
    "quic-auth",
    "quic-metrics",
    "quic-video",
    "gst-bridge",
    "quic-video-poc",
    "quic-video-test",
    "quic-video-stream",
    "onvif-server",
    "onvif-client",
    "admin-web",
    "storage-mount",
    "storage-selector",
    "ffmpeg-recorder",
]
