[workspace]
resolver = "2"
members = [
    "central",
    "remote",
    "quic-common",
    "quic-metrics",
    "quic-video",
    "onvif-server",
    "onvif-client",
    "admin-web",
    "ffmpeg-recorder",
    "recording-retrieval",
    "config-manager",
    "remote-setup",
    "central-setup",
    "fingerprint-store",
    "slingshot-encryption",
    "adaptive-bitrate",
    "ws-security",
    "audit-log",
    "hls-server",
    "rate-limiter",
]
