[package]
name = "audit-log"
version = "0.1.0"
edition = "2021"
description = "Audit logging for slingshot central node"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
