[package]
name = "central-setup"
version = "0.1.0"
edition = "2021"
description = "Interactive setup tool for kaiju central node"

[[bin]]
name = "kaiju-central-setup"
path = "src/main.rs"

[dependencies]
# Configuration management
config-manager = { path = "../config-manager" }

# Fingerprint/user storage
fingerprint-store = { path = "../fingerprint-store" }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Error handling
anyhow = "1"

# Network interface enumeration
if-addrs = "0.13"

# QR code display in terminal
qrcode = "0.14"
