[package]
name = "central"
version = "0.1.0"
edition = "2021"


[dependencies]
# GStreamer for RTSP
gstreamer = "0.23"
gstreamer-rtsp-server = "0.23"
gstreamer-app = "0.23"
glib = "0.20"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"

# Ed25519 for fingerprinting
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# JSON for audit details
serde_json = "1"

# ONVIF server
onvif-server = { path = "../onvif-server" }

# WS-Security authentication
ws-security = { path = "../ws-security" }

# Admin web interface
admin-web = { path = "../admin-web" }

# Configuration management
config-manager = { path = "../config-manager" }

# HTTP server (for test_remote)
axum = "0.8"

# QUIC common utilities
quic-common = { path = "../quic-common" }

# QUIC metrics
quic-metrics = { path = "../quic-metrics" }

# QUIC video transport
quic-video = { path = "../quic-video" }

# Recording retrieval
recording-retrieval = { path = "../recording-retrieval" }

# Fingerprint storage
fingerprint-store = { path = "../fingerprint-store" }

# Audit logging
audit-log = { path = "../audit-log" }

# Home directory
dirs = "5"

[[bin]]
name = "rtsp-server"
path = "src/main.rs"

[[bin]]
name = "central"
path = "src/bin/central.rs"

[[bin]]
name = "test_remote"
path = "src/bin/test_remote.rs"
