[package]
name = "ffmpeg-recorder"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
nix = { version = "0.29", features = ["fs"] }
kaiju-encryption = { path = "../kaiju-encryption" }

[dev-dependencies]
tempfile = "3"
