[package]
name = "fingerprint-store"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed fingerprint storage for slingshot central node"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
slingshot-encryption = { path = "../slingshot-encryption" }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
totp-rs = { version = "5", features = ["qr"] }
base32 = "0.5"

[dev-dependencies]
tempfile = "3"
