[package]
name = "hls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["process", "io-util", "sync", "fs", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

# Internal dependencies
kaiju-encryption = { path = "../kaiju-encryption" }
recording-retrieval = { path = "../recording-retrieval" }
quinn = "0.11"
