[package]
name = "hls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["process", "io-util", "sync", "fs", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "1"
tracing = "0.1"
regex = "1"

[dev-dependencies]
tempfile = "3"
