[package]
name = "onvif-server"
version = "0.1.0"
edition = "2021"


[dependencies]
# HTTP server
axum = "0.8"

# XML parsing for SOAP
quick-xml = "0.37"

# WS-Security authentication
ws-security = { path = "../ws-security" }

# Rate limiting
rate-limiter = { path = "../rate-limiter" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
