[package]
name = "quic-video-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# GStreamer
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-rtsp-server = "0.23"
glib = "0.20"

# QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Certificate generation
rcgen = "0.13"

# Local crates
quic-video = { path = "../quic-video" }
gst-bridge = { path = "../gst-bridge" }
quic-common = { path = "../quic-common" }

[[bin]]
name = "poc-sender"
path = "src/bin/sender.rs"

[[bin]]
name = "poc-receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "test-rtsp"
path = "src/bin/test_rtsp.rs"
