[package]
name = "quic-video-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-sender"
path = "src/bin/sender.rs"

[[bin]]
name = "test-receiver"
path = "src/bin/receiver.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-rtsp-server = "0.23"
glib = "0.20"
quic-video = { path = "../quic-video" }
quic-common = { path = "../quic-common" }
