[package]
name = "remote-setup"
version = "0.1.0"
edition = "2021"
description = "Interactive setup and installation tool for slingshot remote nodes"

[[bin]]
name = "slingshot-remote-setup"
path = "src/main.rs"

[dependencies]
# Configuration management
config-manager = { path = "../config-manager" }

# ONVIF client for camera discovery
onvif-client = { path = "../onvif-client" }

# Fingerprint store for admin user management
fingerprint-store = { path = "../fingerprint-store" }

# QR code generation
qrcode = "0.14"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Error handling
anyhow = "1"

# User/group info
users = "0.11"

# Storage device detection (for lsblk JSON parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
