[package]
name = "storage-selector"
version = "0.1.0"
edition = "2021"
description = "Interactive storage device selection tool for remote unit setup"


[lib]
path = "src/lib.rs"

[[bin]]
name = "storage-selector"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = "0.11"
bytesize = "1"
chrono = "0.4"
thiserror = "1"
